--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,6 @@ services:
     ports:
       - '3306:3306'
     volumes:
-      - ./db/ebook_moim/mysql-init-files/:/docker-entrypoint-initdb.d/
-      - ./db/ebook_moim/mysql-confs/:/etc/mysql/conf.d/
       - mysql-ebook-moim-storage:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-proot"]
@@ -35,5 +33,15 @@ services:
     container_name: redis-ebook-moim
     ports:
       - '6379:6379'
+  nginx:
+    image: nginx:latest
+    container_name: nginx-ebook-moim
+    ports:
+      - '80:80'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./ebookFinder/staticfiles:/ebook_moim/ebookFinder/staticfiles
+    depends_on:
+      - ebook-moim
 volumes:
   mysql-ebook-moim-storage: {}
