--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     container_name: redis-ebook-moim
     ports:
       - '6379:6379'
-  nginx:
+  nginx-ebook-moim:
     image: nginx:latest
     container_name: nginx-ebook-moim
     ports:
@@ -41,7 +41,9 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./ebookFinder/staticfiles:/ebook_moim/ebookFinder/staticfiles
+      - ./nginx/logs:/var/log/nginx
     depends_on:
       - ebook-moim
+    command: /bin/bash -c "mkdir -p ./nginx/logs && touch ./nginx/logs/access.log && touch ./nginx/logs/error.log && nginx -g 'daemon off;'"
 volumes:
   mysql-ebook-moim-storage: {}
