chores: add django error logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,14 @@ services:
       - '3306:3306'
     volumes:
       - mysql-ebook-moim-storage:/var/lib/mysql
+      - ./db/ebook_moim/mysql-confs/:/etc/mysql/conf.d/
+      # - ./db/ebook_moim/logs:/var/log/
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-proot"]
       interval: 5s
       timeout: 5s
       retries: 3
-      start_period: 0s
+      start_period: 5s
   ebook-moim:
     build:
       context: ./ebookFinder/
@@ -44,6 +46,5 @@ services:
       - ./nginx/logs:/var/log/nginx
     depends_on:
       - ebook-moim
-    command: /bin/bash -c "mkdir -p ./nginx/logs && touch ./nginx/logs/access.log && touch ./nginx/logs/error.log && nginx -g 'daemon off;'"
 volumes:
   mysql-ebook-moim-storage: {}
