--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,16 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./ebookFinder/staticfiles:/ebook_moim/ebookFinder/staticfiles
       - ./nginx/logs:/var/log/nginx
+      - ./nginx/certs:/etc/letsencrypt
     depends_on:
       - ebook-moim
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./nginx/certbot:/etc/letsencrypt
+      - ./nginx/logs:/var/log/letsencrypt
+      - ./nginx/html:/var/www/certbot
+    entrypoint: /bin/sh -c "trap exit TERM; while :; do sleep 6h & wait $${!}; certbot renew --webroot -w /var/www/certbot; done"
 volumes:
   mysql-ebook-moim-storage: {}
